--- a/Production/components/navbar.html
+++ b/Production/components/navbar.html
@@ -9,20 +9,25 @@
   </div>
   <nav class="z-[1000] w-full fixed px-5 sm:px-8 pt-1 sm:pt-5 nav-top">
     <div class="flex justify-between items-center">
-      <a href="index.html">
-        <img class="max-h-[68px] w-auto inline-block dark:hidden" src="images/logo.png" alt="logo" />
-        <img class="max-h-[68px] w-auto dark:inline-block hidden" src="images/logo-white.png" alt="logo" />
+      <a href="index.html" class="flex-shrink-0">
+        <img class="max-h-[68px] w-auto inline-block dark:hidden transition-opacity duration-300" src="images/logo.png" alt="logo" />
+        <img class="max-h-[68px] w-auto dark:inline-block hidden transition-opacity duration-300" src="images/logo-white.png" alt="logo" />
       </a>
-      <div class="hidden lg:flex items-center gap-8">
-        <ul class="desktop-nav flex items-center gap-6"></ul>
+      
+      <!-- Desktop Navigation -->
+      <div class="hidden lg:flex items-center">
+        <ul class="desktop-nav flex items-center gap-8"></ul>
       </div>
+      
+      <!-- Mobile Menu Button -->
       <div class="flex items-center lg:hidden">
-        <div class="menu-open cursor-pointer relative h-[68px] w-[68px] before:content-[''] before:absolute before:top-[28px] before:left-1/2 before:w-9 before:h-0.5 before:bg-black dark:before:bg-white before:-translate-x-1/2 before:transition-all before:duration-300 after:content-[''] after:absolute after:bottom-[28px] after:left-1/2 after:w-9 after:h-0.5 after:bg-black dark:after:bg-white after:-translate-x-1/2 after:transition-all after:duration-300 hover:before:top-[25px] hover:after:bottom-[25px]"></div>
+        <button class="menu-open cursor-pointer relative h-[68px] w-[68px] before:content-[''] before:absolute before:top-[28px] before:left-1/2 before:w-9 before:h-0.5 before:bg-black dark:before:bg-white before:-translate-x-1/2 before:transition-all before:duration-300 after:content-[''] after:absolute after:bottom-[28px] after:left-1/2 after:w-9 after:h-0.5 after:bg-black dark:after:bg-white after:-translate-x-1/2 after:transition-all after:duration-300 hover:before:top-[25px] hover:after:bottom-[25px] focus:outline-none" aria-label="Open menu"></button>
       </div>
     </div>
   </nav>
 </header>
 
+<!-- Mobile/Overlay Menu -->
 <nav data-lenis-prevent="true" class="menu fixed right-6 top-0 w-full min-h-screen overflow-y-auto z-[99999] before:content-none md:before:content-[''] before:absolute before:w-[1px] before:h-[calc(100vh-94px)] before:left-[45%] before:top-0 before:bg-white before:bg-opacity-10 opacity-0">
   <div class="menu-close cursor-pointer sticky top-8 left-[89%] sm:left-[90%] md:left-[93%] lg:left-[94.7%] xl:left-[96.5%] 2xl:left-[96%] h-[40px] w-[40px] text-white">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
@@ -54,7 +59,7 @@
 
 <!-- Dark Mode toggle -->
 <div class="toggle-button fixed right-10 bottom-10 z-[1000]">
-  <button id="theme-toggle" type="button" class="text-secondary bg-black/90 dark:bg-white/90 rounded-[1px] backdrop-blur-xl dark:text-white focus:outline-none focus:ring-0 focus:ring-gray-200 w-[44px] h-[44px] flex justify-center items-center">
+  <button id="theme-toggle" type="button" class="text-secondary bg-black/90 dark:bg-white/90 rounded-[1px] backdrop-blur-xl dark:text-white focus:outline-none focus:ring-0 focus:ring-gray-200 w-[44px] h-[44px] flex justify-center items-center transition-all duration-300 hover:scale-110">
     <svg data-testid="geist-icon" id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="#fff" stroke-linejoin="round" viewBox="0 0 16 16">
       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5 0.25V1V1.5H11L11.75 1.5V3H11H10.5V3.5V4.25H9V3.5V3H8.5H7.75V1.5H8.5H9V1V0.25H10.5ZM3.25514 2.75496C2.33413 3.53491 1.75 4.69972 1.75 6C1.75 8.34721 3.65279 10.25 6 10.25C7.30029 10.25 8.4651 9.66587 9.24505 8.74485C9.16377 8.74827 9.08207 8.74999 9 8.74999C5.82436 8.74999 3.25 6.17563 3.25 2.99999C3.25 2.91792 3.25172 2.83623 3.25514 2.75496ZM0.25 6C0.25 3.51072 1.83142 1.39271 4.042 0.592193L5.00256 1.55275C4.83933 2.00347 4.75 2.49047 4.75 2.99999C4.75 5.3472 6.65279 7.24999 9 7.24999C9.50953 7.24999 9.99653 7.16065 10.4473 6.99743L11.4078 7.95798C10.6073 10.1686 8.48929 11.75 6 11.75C2.82436 11.75 0.25 9.17564 0.25 6Z" fill="#fff" transform="translate(2.25, 2.25)"></path>
     </svg>
